package MisEstructurasDeDatos.Grafos;

public interface InterfazDatosArista extends Comparable<InterfazDatosArista> {
    // En esta interfaz garantizamos que tenemos un dato y que es de tipo String
    String getDato();
}
